# ubuntu-dev-toolkit

./: README.md  pyproject.toml
src/cli/: main.py
src/components/monitor/: analyzer.py
src/components/package_deps/: analyzer.py
src/components/setup/: installer.py
src/utils/: shell.py
tests/: test_cli.py
